# cvmfs-server-scraper-rust

./: Cargo.toml  Changelog.md  LICENSE.txt  README.md
src/: constants.rs  errors.rs  lib.rs  scraper.rs  utilities.rs
src/models/: cvmfs_published.rs  cvmfs_status_json.rs  generic.rs  geoapi.rs  meta_json.rs  mod.rs  repositories_json.rs  servers.rs
