[package]
name = "cvmfs_server_scraper"
version = "0.0.1"
edition = "2021"
authors = ["Terje Kvernes <terje@kvernes.no>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
semver = "1"
chrono = { version = "0.4", features = ["serde"] }
yare = "3"
futures = "0.3"
