[package]
name = "cvmfs_server_scraper"
version = "0.0.1"
edition = "2021"
authors = ["Terje Kvernes <terje@kvernes.no>"]
license = "MIT"
description = "A scraper for CVMFS servers"
repository = "https://github.com/terjekv/cvmfs-server-scraper-rust"
homepage = "https://github.com/terjekv/cvmfs-server-scraper-rust"
readme = "README.md"
keywords = ["cvmfs", "scraper", "monitoring", "eessi"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
semver = "1"
chrono = { version = "0.4", features = ["serde"] }
yare = "3"
futures = "0.3"
log = "0.4"
